# gamma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  todo.txt
Gamma/Assets/IBL/: credits.txt
Gamma/Assets/Models/: sphere.mtl  teapot2.ply
Gamma/Assets/Models/helmet/: README.txt  helmet.gscn
Gamma/Assets/Models/helmet/textures/: map_roughness.m
Gamma/Headers/: GLProgram.hpp  gamma.hpp  utils.hpp
Gamma/Shaders/: bloom_ds.frag  bloom_th.frag  bloom_us.frag  blur_gauss_7x1.frag  common.glh  cube_blur_gauss_7x1.frag  cube_blur_gauss_7x1.geom  draw_depth_2d.frag  draw_skybox_hdr.frag  draw_skybox_hdr.vert  draw_tex_2d.frag  draw_tex_2d.vert  eq_cube_unwrap.frag  eq_cube_unwrap.vert  filter_fxaa.frag  filter_null.frag  filter_tonemap.frag  ggx.frag  ggx.vert  ggx_funcs.glh  ibl_calc_brdf_lut.frag  ibl_calc_irradiance.frag  ibl_calc_radiance.frag  random.glh  shadow_funcs.glh  shadowmap_dir.frag  shadowmap_dir.vert  shadowmap_point.frag  shadowmap_point.geom  shadowmap_point.vert  sph_spheres.frag  sph_spheres.vert  texture_sum.frag
Gamma/Sources/: AABB.cpp  AABB.hpp  BloomPass.cpp  BloomPass.hpp  Camera.cpp  Camera.hpp  FilePath.hpp  FlightCamera.cpp  FlightCamera.hpp  GLProgram.cpp  GLProgram.hpp  GLWrappers.hpp  GammaCore.cpp  GammaCore.hpp  GammaPhysics.cpp  GammaPhysics.hpp  GammaRenderer.cpp  GammaRenderer.hpp  IBLMaps.cpp  IBLMaps.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OrbitCamera.cpp  OrbitCamera.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Scene.cpp  Scene.hpp  String.hpp  gamma.hpp  imgui_impl_glfw_gl3.cpp  main.cpp  sph_kernels.cl  utils.cpp  utils.hpp
Gamma/Sources/Fluids/: SPH.cpp  SPH.hpp  SPHKernels.hpp
Gamma/Sources/Simulation/Particles/: GravitySim.cpp  GravitySim.hpp  GravitySimKernels.cpp  GravitySimKernels.hpp
Gamma/Sources/Simulation/SPH/: SPH.cpp  SPH.hpp  SPHKernels.cpp  SPHKernels.hpp
